Add content to all faces of cube :construction:

--- a/index.html
+++ b/index.html
@@ -44,9 +44,32 @@
 					</ul>
 				</div>
 			</div>
-			<div id="back"></div>
-			<div id="left"></div>
-			<div id="top"></div>
+			<div id="back">
+				<div class="videoWrapper smallVideo">
+				    <video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="640"
+				    height="264" 
+				        poster="http://video-js.zencoder.com/oceans-clip.png"
+				        data-setup="{}">
+				      <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
+				      <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
+				      <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
+				    </video>
+				  </div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lorem libero, blandit eu imperdiet at, auctor a odio. Ut in pellentesque lectus. Mauris et libero libero. Donec velit velit, faucibus et diam eget, mollis auctor justo. Donec rutrum imperdiet luctus. Mauris ac diam neque. Lorem ipsum dolor sit amet blandit eu imperdiet at, dollis auctor justo donec.</p>
+				<div id="buttons">
+					<a href="#" id="first_btn" class="anim"><span>&#211;</span>Back</a>
+					<a href="#" id="last_btn" class="anim">Next<span>&#214;</span></a>
+				</div>
+			</div>
+			<div id="left">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lorem libero, blandit eu imperdiet at, auctor a odio. Ut in pellentesque lectus. Mauris et libero libero. Donec velit velit, faucibus et diam eget, mollis auctor justo. Donec rutrum imperdiet luctus. Mauris ac diam neque. Lorem ipsum dolor sit amet blandit eu imperdiet at, dollis auctor justo donec rutrum imperdiet luctus.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lorem libero, blandit eu imperdiet at, auctor a odio. Ut in pellentesque lectus. Mauris et libero libero. Donec velit velit, faucibus et diam eget, mollis auctor justo. Donec rutrum imperdiet luctus. Mauris ac diam neque. Lorem ipsum dolor sit amet blandit eu imperdiet at, dollis auctor justo donec rutrum imperdiet luctus.</p>
+				<a href="#" rel="a_top"><span>&#243;</span>Finish</a>
+			</div>
+			<div id="top">
+				<h1>Thank you!</h1>
+				<span>&#243;</span>
+			</div>
 			<div id="bottom"></div>
 		</div>
 	</div>
