Add classes to links :wrench:

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 				  </div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lorem libero, blandit eu imperdiet at, auctor a odio. Ut in pellentesque lectus. Mauris et libero libero. Donec velit velit, faucibus et diam eget, mollis auctor justo. Donec rutrum imperdiet luctus. Mauris ac diam neque. Lorem ipsum dolor sit amet blandit eu imperdiet at, dollis auctor justo donec.</p>
 				<div id="buttons">
-					<a href="#" id="first_btn" class="anim"><span>&#211;</span>Back</a>
-					<a href="#" id="last_btn" class="anim">Next<span>&#214;</span></a>
+					<a href="#" id="first_btn" class="anim" data-anim="right"><span>&#211;</span>Back</a>
+					<a href="#" id="last_btn" class="anim" data-anim="left">Next<span>&#214;</span></a>
 				</div>
 			</div>
 			<div id="left">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lorem libero, blandit eu imperdiet at, auctor a odio. Ut in pellentesque lectus. Mauris et libero libero. Donec velit velit, faucibus et diam eget, mollis auctor justo. Donec rutrum imperdiet luctus. Mauris ac diam neque. Lorem ipsum dolor sit amet blandit eu imperdiet at, dollis auctor justo donec rutrum imperdiet luctus.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lorem libero, blandit eu imperdiet at, auctor a odio. Ut in pellentesque lectus. Mauris et libero libero. Donec velit velit, faucibus et diam eget, mollis auctor justo. Donec rutrum imperdiet luctus. Mauris ac diam neque. Lorem ipsum dolor sit amet blandit eu imperdiet at, dollis auctor justo donec rutrum imperdiet luctus.</p>
-				<a href="#" rel="a_top"><span>&#243;</span>Finish</a>
+				<a href="#" rel="a_top" class="anim" data-anim="top"><span>&#243;</span>Finish</a>
 			</div>
 			<div id="top">
 				<h1>Thank you!</h1>
